--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,20 +25,18 @@ influxdb:
 
 sensor:
 # Weather Prediction
-  - platform: yweather
-    scan_interval: 120
-    monitored_conditions:
-      - weather
-      - weather_current
-      - temp_min
-      - temp_max
-      - wind_speed
-      - pressure
-      - visibility
-      - humidity
-      - temperature
   - platform: yr
     scan_interval: 120
+    monitored_conditions:
+      - temperature
+      - symbol
+      - precipitation
+      - windSpeed
+      - pressure
+      - windDirection
+      - humidity
+      - fog
+      - dewpointTemperature
   - platform: ha02
     i2c_port: 6
     scan_interval: 120
