--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,6 +17,23 @@ frontend:
 http:
   # Uncomment this to add a password (recommended!)
   api_password: !secret http_password
+config:
+updater:
+  # Optional, allows Home Assistant developers to focus on popular components.
+  # include_used_components: true
+
+# Discover some devices automatically
+discovery:
+
+# Allows you to issue voice commands from the frontend in enabled browsers
+conversation:
+
+# Enables a map showing the location of tracked devices
+map:
+
+# Track the sun
+sun:
+
 
 influxdb:
     host: 127.0.0.1
@@ -78,3 +95,5 @@ switch:
   - platform: mraa_gpio
     ports:
           6: 'chauffage'
+
+automation: !include automations.yaml
